samples/packages/static-lib-usage-example/quick_build_recipe.txt
Quick Build of Recipe without Static Library Dependency for ARM Architecture using the Build Directory:
=======================================================================================================

1. For building the Image for ARM Architecture instead of the Intel (x86) Architecture, the changes shall be made to the 'local.conf' file in the 'build/conf' directory.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ vi conf/local.conf
=> MACHINE ?= "qemuarm"
=> #MACHINE ?= "qemux86-64"

2. The Layer directory should be created for the the BitBake to pick it up during the Build. The 'bitbake-layers' command is used to create and add the compatible Layer.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ bitbake-layers create-layer ../meta-layer
NOTE: Starting bitbake server...
Add your new layer with 'bitbake-layers add-layer /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer'
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ bitbake-layers add-layer ../meta-layer
NOTE: Starting bitbake server...
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ bitbake-layers show-layers
NOTE: Starting bitbake server...
layer                 path                                      priority
==========================================================================
meta                  /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta   5
meta-poky             /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta-poky  5
meta-yocto-bsp        /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta-yocto-bsp  5
meta-layer            /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer  5

3. The Recipe file and the C file must be placed in the Layer structure in such a way that the BitBake is able to pick them up during the Build.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ cd ../meta-layer/
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer$ ls
conf  COPYING.MIT  README  recipes-example
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer$ cd recipes-example/

---> It is important to note that the name of the Recipe folder must match with the name of the Recipe file name being used to Build the SW.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example$ mkdir static-lib-test
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example$ ls
example  static-lib-test
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example$ cd static-lib-test/
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test$ mkdir files
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test$ cd files/

4. Include the C file in the 'files' directory of the Layer.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test/files$ vi program.c
---> Add the contents of the C file to be Built using the Recipe.

5. Include the Recipe file in the Recipe folder i.e. 'static-lib-test' for the BitBake to be able to read it during the Build.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test/files$ cd ..
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test$ vi static-lib-test_0.1.bb
---> Add the contents of the Recipe file to Build the C file.
---> There is no dependency specified on the static library in the Recipe file.
---> The 'do_compile' Task includes the basic Compile command for a C file.
=> do_compile() {
=>     ${CC} ${LDFLAGS} program.c -o program
=> }

6. This is the final Layer directory structure which is compatible with the BitBake for the Build.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test$ cd ..
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example$ tree static-lib-test
static-lib-test
├── files
│   └── program.c
└── static-lib-test_0.1.bb

1 directory, 2 files

7. On the Host Machine, run the 'bitbake' command with Target as the Recipe name for a quick Build.
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test$ cd ../../../build
prabhat_kiran@coldstone:~/Documents/Learnings/Yocto_Resources/Poky/poky/build$ bitbake static-lib-test
Loading cache: 100% |##############################################################################################################################################| Time: 0:00:00
Loaded 1780 entries from dependency cache.
Parsing recipes: 100% |############################################################################################################################################| Time: 0:00:03
Parsing of 989 .bb files complete (984 cached, 5 parsed). 1784 targets, 159 skipped, 0 masked, 0 errors.
NOTE: Resolving any missing task queue dependencies

Build Configuration:
BB_VERSION           = "2.0.0"
BUILD_SYS            = "x86_64-linux"
NATIVELSBSTRING      = "universal"
TARGET_SYS           = "arm-poky-linux-gnueabi"
MACHINE              = "qemuarm"
DISTRO               = "poky"
DISTRO_VERSION       = "4.0.27"
TUNE_FEATURES        = "arm vfp cortexa15 neon thumb callconvention-hard"
TARGET_FPU           = "hard"
meta
meta-poky
meta-yocto-bsp
meta-layer           = "my-kirkstone:81e0dc80d72d66b7f15a34c0da7a0a8c58809056"
meta-ti-bsp          = "kirkstone:52018a8d730b2977d7163bf56c398905ef9115ac"
meta-arm
meta-arm-toolchain   = "kirkstone:10c27f061b22af78e17a23cf540b69501afc7160"

Initialising tasks: 100% |#########################################################################################################################################| Time: 0:00:00
Sstate summary: Wanted 9 Local 0 Mirrors 0 Missed 9 Current 153 (0% match, 94% complete)
NOTE: Executing Tasks
ERROR: static-lib-test-0.1-r0 do_compile: ExecutionError('/home/.../Poky/poky/build/tmp/work/.../static-lib-test/0.1-r0/temp/run.do_compile.372909', 1, None, None)
ERROR: Logfile of failure stored in: /home/.../Poky/poky/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/static-lib-test/0.1-r0/temp/log.do_compile.372909
Log data follows:
| DEBUG: Executing shell function do_compile
| program.c:2:10: fatal error: static_lib.h: No such file or directory
|     2 | #include "static_lib.h"
|       |          ^~~~~~~~~~~~~~
| compilation terminated.
| WARNING: /home/.../poky/build/tmp/work/.../static-lib-test/0.1-r0/temp/run.do_compile.372909:141 exit 1 from 'arm-poky-linux-gnueabi-gcc -mthumb ... program.c -o program'
| WARNING: Backtrace (BB generated script):
| 	#1: do_compile, /home/.../Yocto_Resources/Poky/poky/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/static-lib-test/0.1-r0/temp/run.do_compile.372909, line 141
| 	#2: main, /home/.../Learnings/Yocto_Resources/Poky/poky/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/static-lib-test/0.1-r0/temp/run.do_compile.372909, line 145
ERROR: Task (/home/prabhat_kiran/.../Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test/static-lib-test_0.1.bb:do_compile) failed with exit code '1'
NOTE: Tasks Summary: Attempted 658 tasks of which 650 didn't need to be rerun and 1 failed.
NOTE: Writing buildhistory
NOTE: Writing buildhistory took: 2 seconds

Summary: 1 task failed:
  /home/prabhat_kiran/Documents/Learnings/Yocto_Resources/Poky/poky/meta-layer/recipes-example/static-lib-test/static-lib-test_0.1.bb:do_compile
Summary: There was 1 ERROR message, returning a non-zero exit code.
